@@ -1,4 +1,6 @@
 Version 0.9.3 -> 0.9.4
+----------------------
+* Add YUY2 overlay (fullscreen/hardware-scaled)
 
 Version 0.9.2 -> 0.9.3
 ----------------------
